<resources>
    <string name="app_name">Calculator</string>
    <string name="info">Info</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="result">Result</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="c">C</string>
    <string name="OpenBracket">(</string>
    <string name="ClosedBracket">)</string>
    <string name="Minus">−</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="Plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="equal">=</string>
    <string name="Point">.</string>
    <string name="_0">0</string>
    <string name="Del">⬅</string>
    <string name="ac">AC</string>
</resources>