<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:gravity="right|center"
        android:paddingHorizontal="20dp"
        android:paddingTop="15dp"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:paddingHorizontal="20dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnC"
                android:onClick="clearAll"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/ac"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnOB"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/OpenBracket"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnCB"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/ClosedBracket"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnDiv"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/divide"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn7"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn8"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn9"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnMul"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/multiply"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn4"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn5"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn6"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnSub"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/Minus"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn1"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn2"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btn3"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnAdd"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/Plus"
                android:textColor="#cae962"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnDel"
                android:onClick="clearOneDigit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/Del"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="OnClick,UsingOnClickInXml" />

            <Button
                android:id="@+id/btn0"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnPoint"
                android:onClick="buttonClick"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle"
                android:text="@string/Point"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/btnEqual"
                android:onClick="equalButtonEvent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/circle_equal"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:targetApi="lollipop"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>